--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <base href="http://vignette2.wikia.nocookie.net/creepypasta/images/f/f7/" target="_blank">
+    <base href="assets/" target="_blank">
+    <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
     <title>USE 'EM ALL!</title>
 </head>
 <body>
-<img src="Gasmaskmonster.jpg" width="200" height="240" alt="Gasmaskmonster">
-<a href="http://creepypasta.wikia.com/wiki/Creepypasta_Wiki">Creepypasta</a>
+<main>
+<header>So it begins...</header>
+    <nav>
+        <a href="https://www.youtube.com/watch?v=SkEtnNzc9gA">asdfmovie</a> |
+        <a href="https://www.youtube.com/watch?v=2WHb4Hf7fbE">A Good Song</a> |
+        <a href="https://www.youtube.com/watch?v=bAIbvlobWDM">The Hole</a> |
+        <a href="https://www.youtube.com/watch?v=j2OD-dV7j_I">Mz Hyde</a>
+    </nav>
+<a href="http://creepypasta.wikia.com/wiki/Creepypasta_Wiki">Creepypasta.</a> Creepy stuff from <time>22:00</time> to <time>3:00</time>
 <h1>The following paragraph will be quite difficult to read.</h1>
 <h1><bdo dir="rtl"><a href="http://play.typeracer.com/">The following link will challenge you to type as fast as you can. DO NOT TRY THIS WHILE DRIVING!</a></bdo></h1>
 <p>Whats' going on <abbr title="at the moment">atm</abbr>?</p>
@@ -24,23 +32,36 @@
     <br>Seriously, scroll down.
     </p>
 </article>
+</main>
 <aside>
     <h2>Randomness</h2>
     <pre>This is <b>honestly some</b> <b>completely random</b> text.</pre>
 </aside>
-<audio controls>
-    <source src="https://www.youtube.com/watch?v=we3EJLTV650/" type="audio/mpeg">
-    <source src="https://www.youtube.com/watch?v=we3EJLTV650/" type="audio/ogg">
-</audio>
+<cite>She's Fire Walking</cite>
+<div id="audio_div">
+    <audio id="firewalking" controls>
+        <source src="audio/Tim McMorris - She's Fire Walking.mp3" type="audio/mpeg">
+    </audio>
+    </div>
 <ol>
     <li>User <bdi>Good</bdi>: 11 points</li>
     <li>User <bdi>Better</bdi>: 21 points</li>
     <li>User <bdi>Best</bdi>: 666 points</li>
 </ol>
+<hr>
 <h2>WHERE ARE YOU HEADED?</h2>
 <p>Here's a quote by Linus Torvalds:</p>
 <blockquote cite="http://www.goodreads.com/quotes/tag/programming">Talk is cheap. Show me the code.</blockquote>
-<button type="button" onclick="alert ('You little rebel. I like you.')">DON'T TRY ME!</button>
+<div>
+    <code>A piece of crypted binary code:</code>
+<samp>010101302120101031201202120101</samp>
+    <var>Value at Risk!</var>
+</div>
+<button type="button" onclick="alert ('You little rebel. I like you.')">DON'T TRY ME!</button> <br>
+<cite>Carnival of Rust</cite>
+<video width="400" height="320" controls>
+    <source src="video/Poets%20of%20the%20Fall%20-%20Carnival%20of%20Rust.mp4" type="video/mp4">
+</video> <br>
 <canvas id="whatisCanvas">CAN(VAS)?</canvas>
 <script>
     var c = document.getElementById("whatisCanvas");
@@ -51,98 +72,119 @@
     ctx.fillStyle=grd;
     ctx.fillRect(20,20,150,100);
 </script>
-<address>Name: Rete-Keyt <br> E-mail: rete-keyt.uibo@khk.ee</address>
-<!--
- <caption>        Defines a table caption
- Defines centered text
-<cite>        Defines the title of a work
- <code>        Defines a piece of computer code
-<col>        Specifies column properties for each column within a <colgroup> element
-<colgroup>        Specifies a group of one or more col-umns in a table for formatting
-<datalist>        Specifies a list of pre-defined options for input controls
-<dd>        Defines a description/value of a term in a description list
-<del>        Defines text that has been deleted from a document
-<details>        Defines additional details that the user can view or hide
-<dfn>        Represents the defining instance of a term
-<dialog>        Defines a dialog box or window
-Defines a directory list
-<div>        Defines a section in a doc-ument
-<dl>        Defines a description list
-<dt>        Defines a term/name in a description list
-<em>        Defines emphasized text
-<embed>        Defines a con-tainer for an external (non-HTML) application
- <fieldset>        Groups related elements in a form
-<figcaption>        De-fines a caption for a <figure> element
-<figure>        Speci-fies self-contained content
-Defines font, col-or, and size for text
-<footer>        De-fines a footer for a document or section
-<form>        De-fines an HTML form for user input
-Defines a window (a frame) in a frameset
-Defines a set of frames
-<h1> to <h6>        Defines HTML headings
-<head>        Defines information about the document
-<head-er>        Defines a header for a document or section
-<hr>        Defines a thematic change in the content
-<i>        Defines a part of text in an alternate voice or mood
-<iframe>        Defines an inline frame
-<img>        Defines an image
-<input>        Defines an input control
-<ins>        Defines a text that has been inserted into a document
-<kbd>        Defines keyboard input
-<keygen>        Defines a key-pair generator field (for forms)
-<label>        Defines a label for an <input> element
-<legend>        Defines a caption for a <fieldset> element
- <li>        Defines a list item
-<link>        Defines the relationship between a document and an external resource (most used to link to style sheets)
-<main>        Specifies the main content of a document
-<mark>        Defines marked/highlighted text
-<menu>        Defines a list/menu of commands
-<menuitem>        Defines a command/menu item that the user can invoke from a popup menu
-<meta>        Defines metadata about an HTML document
-<meter>        Defines a scalar measurement within a known range (a gauge)
-<nav>        Defines navigation links
- Defines an alternate content for users that do not support frames
-<noscript>        Defines an alternate content for users that do not support client-side scripts
-<object>        Defines an embedded object
-<ol>        Defines an ordered list
-<optgroup>        Defines a group of related options in a drop-down list
-<option>        Defines an option in a drop-down list
-<output>        Defines the result of a calculation
-<p>        Defines a paragraph
-<param>        Defines a parameter for an object
-<pre>        Defines preformatted text
-<progress>        Represents the progress of a task
-    <q>        Defines a short quotation
-        <s>        Defines text that is no longer correct
-            <samp>        Defines sample output from a computer program
-                <script>        Defines a client-side script
-                <section>        Defines a section in a document
-                <select>        Defines a drop-down list
-                <small>        Defines smaller text
-                <source>        Defines multiple media resources for media elements (<video> and <audio>)
-                <span>        Defines a section in a document
-                Defines strikethrough text
-                <strong>        Defines important text
-                <style>        Defines style information for a document
-                <sub>        Defines subscripted text
-                <summary>        Defines a visible heading for a <details> element
-                                                               <sup>        Defines superscripted text
-                <table>        Defines a table
-                <tbody>        Groups the body content in a table
-                <td>        Defines a cell in a table
-                <textarea>        Defines a multiline input control (text area)
-                <tfoot>        Groups the footer content in a table
-                <th>        Defines a header cell in a table
-                <thead>        Groups the header content in a table
-<time>        Defines a date/time
-<tr>        Defines a row in a table
-<track>        Defines text tracks for media elements (<video> and <audio>)
-Defines teletype text
-<u>        Defines text that should be stylistically different from normal text
-<ul>        Defines an unordered list
-<var>        Defines a variable
-<video>        Defines a video or movie
-<wbr>        Defines a possible line-break"
--->
+<noscript>Sorry, your browser does not support JavaScript!</noscript>
+<br>
+<section>
+<table>
+    <colgroup>
+        <col span="1" style="background-color:lightseagreen">
+        <col style="background-color:lightgreen">
+    </colgroup>
+    <thead>Table, too, has a head</thead>
+    <tbody>
+        <caption> <pre>Cat and Dog breeds</pre> </caption>
+        <tr>
+            <th><em>Dogs</em></th>
+            <th><em>Cats</em></th>
+        </tr>
+        <tr>
+            <td>German Shepherd</td>
+            <td>Fluffy cat</td>
+        </tr>
+        <tr>
+            <td>Husky</td>
+            <td>Fluffier cat</td>
+        </tr>
+        <tfoot>
+        <tr>
+            <td>Great Dane</td>
+            <td>Not so fluffy cat</td>
+        </tr>
+</tfoot>
+    </table>
+    <input list="pet names" name="pet name">
+    <datalist id="pet names">
+        <option value="Bob">
+        <option value="Fiona">
+        <option value="Dog">
+        <option value="Garfield">
+        <option value="Odie">
+    </datalist>
+    <input type="submit">
+<dl>
+    <dt>Cat</dt>
+    <dd>Soft <i>adorable</i> fluffy animal being</dd>
+    <dt>Dog</dt>
+    <dd>An adorable and <del>usually</del> intelligent plus <ins>hopefully</ins> friendly animal</dd>
+</dl>
+</section>
+<summary>Surprise</summary>
+<details>
+    <address><mark>Name:</mark> Rete-Keyt <br>
+        <mark>E-mail:</mark> rete-keyt.uibo@khk.ee</address>
+</details>
+<p><dfn>Sleep</dfn> is a naturally recurring state of mind.</p>
+<form>
+    <fieldset>
+        <legend>Insert your passwords:</legend>
+        Facebook: <input type="text"><br>
+        Gmail: <input type="text"><br>
+        Myspace: <input type="text">
+    </fieldset>
+</form>
+<figure>
+    <figcaption>Don't mind me. Just flying around, enoying the view</figcaption>
+    <img src="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/4/11/1397210130748/Spring-Lamb.-Image-shot-2-011.jpg"/>
+</figure>
+<iframe src="http://css-tricks.com"></iframe><br>
+<kbd>This defines keyboard input. Not keyboard output.</kbd> <br>
+<form action="illegal.asp" method="get">
+    Gun: <input type="text" name="usr_name">
+    Encryption: <keygen name="security">
+    <input type="submit">
+</form>
+<p>Singing skill when you're alone (below) vs when you're with friends (on top).</p>
+<meter value="2" min="0" max="10">2 out of 10</meter><br>
+<meter value="0.6">60%</meter> <hr>
+<p>How long have you been on this page?</p>
+<form action="form.asp">
+    <label for="young">13-17yrs</label>
+    <input type="radio" name="age" id="young" value="young"><br>
+    <label for="grown">18-25yrs</label>
+    <input type="radio" name="age" id="grown" value="grown"><br><br>
+    <input type="submit" value="Submit">
+</form><br>
+<select>
+    <optgroup label="Why">
+        <option value="do">Do</option>
+        <option value="you">You</option>
+    </optgroup>
+    <optgroup label="Enjoy">
+        <option value="scrolling">scrolling</option>
+        <option value="down">down?</option>
+    </optgroup>
+</select>
+<form oninput="x.value=parseInt(a.value)+parseInt(b.value)">0
+    <input type="range" id="a" value="99">100
+    +<input type="number" id="b" value="11">
+    =<output name="x" for="a b"></output>
+</form> <br>
+<u>Destroying</u> <s>your</s> hard drive
+<progress value="11" max="88">
+</progress> <wbr>
+<p> <sup>Martin Golding</sup>'s advice is to: <q> <strong>Always</strong> code as if the guy who ends up maintaining your
+    code will be a <sub>violent</sub> <small>psychopath</small> who knows where you live.</q> <wbr> Maybe we should listen to him.
+   </p> <br>
+<textarea rows="5" cols="50">
+This is the texting area.
+       Text only. Or else...
+</textarea>
+<ul>Things that might happen to people who ignore the rules:
+    <li>Having fun;</li>
+    <li>Adrenaline rush;</li>
+    <li>Interesting life;</li>
+</ul>
+<footer>I know it's not your time, <br>
+but bye-bye.</footer>
 </body>
 </html>
