Projekt 2_Lõpetatud_Lisatud puuduolevad failid

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
 </ol>
     </div>
 <hr>
+    <div class="quote1">
 <h2>WHERE ARE YOU HEADED?</h2>
 <p>Here's a quote by Linus Torvalds:</p>
-<blockquote cite="http://www.goodreads.com/quotes/tag/programming">Talk is cheap. Show me the code.</blockquote>
+        <blockquote cite="http://www.goodreads.com/quotes/tag/programming">Talk is cheap. Show me the code.</blockquote>
+    </div>
     <div class="kood">
         <code>A piece of encrypted binary code:</code>
 <samp>010101302120101031201202120101</samp>
@@ -183,12 +185,11 @@
 </form>
     </div>
     <div id="skill">
-        <p>Singing skill when you're alone (left) vs when you're with friends (right).</p>
+        <p>Singing skill when you're alone (below) vs when you're with friends (top).</p>
 
         <div class="meter">
 <meter value="2" min="0" max="10">2 out of 10</meter><br>
             <meter value="0.6">60%</meter>
-            <hr>
         </div>
     </div>
     <div class="page">
