--- a/index.html
+++ b/index.html
@@ -4,64 +4,126 @@
     <meta charset="UTF-8">
     <base href="assets/" target="_blank">
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
-    <title>USE 'EM ALL!</title>
+    <title>oUt oF tHe bOx</title>
 </head>
 <body>
-<main>
-<header>So it begins...</header>
-    <nav>
-        <a href="https://www.youtube.com/watch?v=SkEtnNzc9gA">asdfmovie</a> |
-        <a href="https://www.youtube.com/watch?v=2WHb4Hf7fbE">A Good Song</a> |
-        <a href="https://www.youtube.com/watch?v=bAIbvlobWDM">The Hole</a> |
-        <a href="https://www.youtube.com/watch?v=j2OD-dV7j_I">Mz Hyde</a>
-    </nav>
-<a href="http://creepypasta.wikia.com/wiki/Creepypasta_Wiki">Creepypasta.</a> Creepy stuff from <time>22:00</time> to <time>3:00</time>
-<h1>The following paragraph will be quite difficult to read.</h1>
-<h1><bdo dir="rtl"><a href="http://play.typeracer.com/">The following link will challenge you to type as fast as you can. DO NOT TRY THIS WHILE DRIVING!</a></bdo></h1>
-<p>Whats' going on <abbr title="at the moment">atm</abbr>?</p>
-<p>Click on the left eye of the mouse for a surprise! Then click on the right side of the mouse for another surprise!</p>
-<img src="http://cdn.orkin.com/images/rodents/deer-mouse-illustration_360x244.jpg" width="360" height="244" usemap="#hiireke">
-<map name="hiireke">
-    <area shape="circle" coords="121,122,7" href="http://listovative.com/different-eye-colors-say/" alt="Eye color meanings">
-    <area shape="circle" coords="223,40,19" href="https://en.wikipedia.org/wiki/Mouse_(computing)" alt="mouse">
-</map>
-<article>
-    <h1>NEWS?!?</h1>
-    <p>This is supposed to look like a news article.
-    <br>Sadly, it only <i>looks</i> like it. No news here.
-    <br>Seriously, scroll down.
-    </p>
-</article>
-</main>
+<style>
+    .quote1 {
+        color: white;
+        clear: both;
+        margin-left: 50px;
+        position: relative;
+    }
+</style>
+<div class="container">
+    <div class="h2">
 <aside>
     <h2>Randomness</h2>
     <pre>This is <b>honestly some</b> <b>completely random</b> text.</pre>
 </aside>
-<cite>She's Fire Walking</cite>
-<div id="audio_div">
+    </div>
+    <div id="audio_div">
+        <cite>She's Fire Walking</cite>
     <audio id="firewalking" controls>
         <source src="audio/Tim McMorris - She's Fire Walking.mp3" type="audio/mpeg">
     </audio>
     </div>
+
+    <main>
+        <header>CHAOS! <br> So it begins...</header>
+        <br>
+
+        <div class="article">
+            <section>
+                <h1>WTF is Panda symbol?</h1>
+
+                <p>The Panda has become the symbol of WWF. The well-known panda logo of WWF originated from a panda
+                    named Chi Chi that was transferred from the Beijing Zoo to the London Zoo in the same year of the
+                    establishment of WWF.</p>
+            </section>
+            <article>
+                <h1>NEWS?!?</h1>
+
+                <p>This is supposed to look like a news article.
+                    <br>Sadly, it only <i>looks</i> like it. No news here.
+                    <br>Seriously, scroll down.</p>
+                <h4>DO IT!</h4>
+
+                <h3>NOW!</h3>
+                <h5>or</h5>
+                <h6>i will bite you</h6>
+            </article>
+        </div>
+        <nav>
+            <a href="https://www.youtube.com/watch?v=bAIbvlobWDM">The Hole</a> |
+            <a href="https://www.youtube.com/watch?v=2WHb4Hf7fbE">A Good Song</a> |
+            <a href="https://www.youtube.com/watch?v=SkEtnNzc9gA">asdfmovie</a> |
+            <a href="https://www.youtube.com/watch?v=j2OD-dV7j_I">Mz Hyde</a>
+        </nav>
+        <div class="creepy"><a href="http://creepypasta.wikia.com/wiki/Creepypasta_Wiki">Creepypasta.</a> Creepy stuff
+            from
+            <time>22:00</time>
+            to
+            <time>3:00</time>
+        </div>
+        <div class="fondile"><h1>The following paragraph will be quite difficult to read.</h1></div>
+
+        <h1><bdo dir="rtl"><a href="http://play.typeracer.com/">The following link will challenge you to type as fast as
+            you
+            can. <br> DO NOT TRY THIS WHILE DRIVING!</a></bdo></h1>
+        <!--Mul <embed> ja <track> ei tööta-->
+
+        <p>Whats' going on <abbr title="at the moment">atm</abbr>?</p>
+
+        <div class="map">
+            <p>Click on the left eye of the mouse for a surprise! Then click on the right side of the mouse for another
+                surprise!</p>
+            <map name="hiireke">
+                <area shape="circle" coords="121,122,7" href="http://listovative.com/different-eye-colors-say/"
+                      alt="Eye color meanings">
+                <area shape="circle" coords="223,40,19" href="https://en.wikipedia.org/wiki/Mouse_(computing)"
+                      alt="mouse">
+            </map>
+            <img src="http://cdn.orkin.com/images/rodents/deer-mouse-illustration_360x244.jpg" width="360" height="244"
+                 usemap="#hiireke">
+        </div>
+    </main>
+    <div class="olli">
 <ol>
     <li>User <bdi>Good</bdi>: 11 points</li>
     <li>User <bdi>Better</bdi>: 21 points</li>
     <li>User <bdi>Best</bdi>: 666 points</li>
 </ol>
+    </div>
 <hr>
+    <div class="quote1">
 <h2>WHERE ARE YOU HEADED?</h2>
 <p>Here's a quote by Linus Torvalds:</p>
-<blockquote cite="http://www.goodreads.com/quotes/tag/programming">Talk is cheap. Show me the code.</blockquote>
-<div>
-    <code>A piece of crypted binary code:</code>
+        <blockquote cite="http://www.goodreads.com/quotes/tag/programming">Talk is cheap. Show me the code.</blockquote>
+    </div>
+    <div class="kood">
+        <code>A piece of encrypted binary code:</code>
 <samp>010101302120101031201202120101</samp>
     <var>Value at Risk!</var>
+        <button type="button" onclick="alert ('You little rebel. I like you.')">DON'T TRY ME!</button>
+        <br>
 </div>
-<button type="button" onclick="alert ('You little rebel. I like you.')">DON'T TRY ME!</button> <br>
+    <div id="form">
+        <form>
+            <fieldset>
+                <legend>Insert your passwords:</legend>
+                Facebook: <input type="text"><br>
+                Gmail: <input type="text"><br>
+                Myspace: <input type="text">
+            </fieldset>
+        </form>
+    </div>
+    <div id="video">
 <cite>Carnival of Rust</cite>
 <video width="400" height="320" controls>
     <source src="video/Poets%20of%20the%20Fall%20-%20Carnival%20of%20Rust.mp4" type="video/mp4">
 </video> <br>
+    </div>
 <canvas id="whatisCanvas">CAN(VAS)?</canvas>
 <script>
     var c = document.getElementById("whatisCanvas");
@@ -74,11 +136,12 @@
 </script>
 <noscript>Sorry, your browser does not support JavaScript!</noscript>
 <br>
-<section>
+
+    <div id="table">
 <table>
     <colgroup>
         <col span="1" style="background-color:lightseagreen">
-        <col style="background-color:lightgreen">
+        <col style="background-color:blue">
     </colgroup>
     <thead>Table, too, has a head</thead>
     <tbody>
@@ -102,6 +165,13 @@
         </tr>
 </tfoot>
     </table>
+    </div>
+    <div id="first">
+        <div id="jalutan">
+            <p>Walk, oh, with me now.</p>
+            <img src="http://mapage.noos.fr/markoal/images/walk.gif"/>
+        </div>
+        <div id="pet_name">
     <input list="pet names" name="pet name">
     <datalist id="pet names">
         <option value="Bob">
@@ -111,31 +181,45 @@
         <option value="Odie">
     </datalist>
     <input type="submit">
+        </div>
+        <div id="kitsud">
 <dl>
     <dt>Cat</dt>
     <dd>Soft <i>adorable</i> fluffy animal being</dd>
     <dt>Dog</dt>
     <dd>An adorable and <del>usually</del> intelligent plus <ins>hopefully</ins> friendly animal</dd>
 </dl>
-</section>
+        </div>
+        <div class="surprise">
+            <span id="essspann">
+    <wbr>
+    <q>Kaalikad
+        <wbr>
+        on toetunud müütidele ja nendest jõudu ammutanud,
+        <wbr>
+        teisalt aga imekspandava visadusega üritanud neid eitada,
+        <wbr>
+        purustada, paljastada, olematuks teha.
+        <wbr>
+        Võib-olla ongi põllumehel õigus, kui ta ütleb, et
+        <wbr>
+        sööme ära selle, mida armastame.</q>
+</span>
 <summary>Surprise</summary>
 <details>
     <address><mark>Name:</mark> Rete-Keyt <br>
         <mark>E-mail:</mark> rete-keyt.uibo@khk.ee</address>
 </details>
+        </div>
+        <div class="tark">
 <p><dfn>Sleep</dfn> is a naturally recurring state of mind.</p>
-<form>
-    <fieldset>
-        <legend>Insert your passwords:</legend>
-        Facebook: <input type="text"><br>
-        Gmail: <input type="text"><br>
-        Myspace: <input type="text">
-    </fieldset>
-</form>
+        </div>
 <figure>
     <figcaption>Don't mind me. Just flying around, enoying the view</figcaption>
     <img src="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2014/4/11/1397210130748/Spring-Lamb.-Image-shot-2-011.jpg"/>
 </figure>
+    </div>
+    <div id="muu">
 <iframe src="http://css-tricks.com"></iframe><br>
 <kbd>This defines keyboard input. Not keyboard output.</kbd> <br>
 <form action="illegal.asp" method="get">
@@ -143,17 +227,35 @@
     Encryption: <keygen name="security">
     <input type="submit">
 </form>
-<p>Singing skill when you're alone (below) vs when you're with friends (on top).</p>
+    </div>
+    <div id="skill">
+        <p>Singing skill when you're alone (below) vs when you're with friends (top).</p>
+
+        <div class="meter">
 <meter value="2" min="0" max="10">2 out of 10</meter><br>
-<meter value="0.6">60%</meter> <hr>
-<p>How long have you been on this page?</p>
-<form action="form.asp">
-    <label for="young">13-17yrs</label>
-    <input type="radio" name="age" id="young" value="young"><br>
-    <label for="grown">18-25yrs</label>
-    <input type="radio" name="age" id="grown" value="grown"><br><br>
-    <input type="submit" value="Submit">
-</form><br>
+            <meter value="0.6">60%</meter>
+        </div>
+    </div>
+    <div class="page">
+        <p>How long have you been on this page?</p></div>
+    <div id="action">
+        <form action="form.asp">
+            <label for="young">13-17yrs</label>
+            <input type="radio" name="age" id="young" value="young"><br>
+            <label for="grown">18-25yrs</label>
+            <input type="radio" name="age" id="grown" value="grown"><br><br>
+            <input type="submit" value="Submit">
+        </form>
+        <br>
+    </div>
+    <div id="list">
+        <ul>Things that might happen to people who ignore the rules:
+            <li>Having fun;</li>
+            <li>Adrenaline rush;</li>
+            <li>Interesting life;</li>
+        </ul>
+    </div>
+    <div class="miks">
 <select>
     <optgroup label="Why">
         <option value="do">Do</option>
@@ -164,27 +266,39 @@
         <option value="down">down?</option>
     </optgroup>
 </select>
+    </div>
+    <div class="form1">
 <form oninput="x.value=parseInt(a.value)+parseInt(b.value)">0
     <input type="range" id="a" value="99">100
     +<input type="number" id="b" value="11">
     =<output name="x" for="a b"></output>
-</form> <br>
+</form>
+        <br></div>
+    <div class="destroy">
 <u>Destroying</u> <s>your</s> hard drive
 <progress value="11" max="88">
-</progress> <wbr>
+</progress>
+        <wbr>
+    </div>
+    <div class="quote">
 <p> <sup>Martin Golding</sup>'s advice is to: <q> <strong>Always</strong> code as if the guy who ends up maintaining your
     code will be a <sub>violent</sub> <small>psychopath</small> who knows where you live.</q> <wbr> Maybe we should listen to him.
-   </p> <br>
-<textarea rows="5" cols="50">
+</p>
+    </div>
+    <br>
+
+    <div id="textarea">
+        <dialog open>Dialoogkast</dialog>
+<textarea rows="5" cols="30">
 This is the texting area.
        Text only. Or else...
 </textarea>
-<ul>Things that might happen to people who ignore the rules:
-    <li>Having fun;</li>
-    <li>Adrenaline rush;</li>
-    <li>Interesting life;</li>
-</ul>
-<footer>I know it's not your time, <br>
+
+        <div class="dog">
+            <img src="https://media1.giphy.com/media/mukzZ4GlySR3y/200_s.gif"/>
+        </div>
+    </div>
+    <footer id="footer">I know it's not your time,
 but bye-bye.</footer>
 </body>
 </html>
